[package]
name = "desesperer"
version = "0.1.0"
edition = "2021"



[dependencies]
actix-web = "4.4.0"
leptos = { version = "0.7.0", features = ["csr", "server", "hydrate"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "macros"] }
thiserror = "2.0.6"
actix-rt = "2.5.0"
uuid = { version = "1.0", features = ["v4"] }
validator = { version = "0.19.0", features = ["derive"] }


[package.metadata.leptos]
bin-features = ["ssr"]